--- a/src/main/resources/main.css
+++ b/src/main/resources/main.css
@@ -108,3 +108,14 @@
 #radar .label {
   float: right;
 }
+
+/*Tree*/
+
+#tree circle {
+  stroke: #003366;
+  fill: #dddddd;
+}
+#tree path {
+  stroke: #336699;
+  fill: none;
+}
